# food-cal

./: .env.example  architecture.md  index.html  pyproject.toml  restart-backend.ps1  run-dev.ps1  run-frontend.ps1  stop-backend.ps1
.github/workflows/: deploy.yml
app/: __init__.py  db.py  debug_agent_log.py  food_resolve.py  food_servings.py  food_types.py  hebrew_lexicon.py  llm.py  main.py  meals.py  nutrition.py  off_foods.py  parse_local.py  portion_yield.py  resolve_structured.py  usda_fdc.py
assets/: index-CA5pzty5.css  index-Cp_E3QX6.js  index-yd4yPAup.js
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: routes.tsx
frontend/src/app/components/: ChatInput.tsx  FoodEntry.tsx  ManualFoodInput.tsx  PendingFoodEntryCard.tsx
frontend/src/app/components/ui/: label.tsx  switch.tsx
frontend/src/app/pages/: DailyLog.tsx  Dashboard.tsx  History.tsx  Summary.tsx
frontend/src/app/utils/: api.ts  foodData.ts  foodNameQuery.ts  manualPresets.ts
frontend/src/styles/: fonts.css  theme.css
scripts/: __init__.py  import_nutrition_seed.py  prefetch_foods_cache.py
tests/: __init__.py  conftest.py  test_entries_api.py  test_food_servings.py  test_food_suggest.py  test_hebrew_lexicon.py  test_llm_message_extract.py  test_log_meal_and_daily_summary.py  test_merge_servings.py  test_off_foods.py  test_openrouter_integration.py  test_parse_local.py  test_portion_yield.py  test_resolve_structured.py  test_usda_fdc_integration.py  test_usda_fruit_disambiguation.py
